# RenderingDebugSandbox

./: CMakeLists.txt  README.md
src/app/: RopeVisualDemo.cpp  RopeVisualDemo.h  main.cpp
src/core/CGL/: CGL.h
src/model_renderer/: ModelRendererDemo.cpp  ModelRendererDemo.h  Texture.cpp  Texture.hpp
src/path_tracer/: BVH.cpp  Bounds3.hpp  Material.hpp  PathTracingDemo.cpp  PathTracingDemo.h  README.md  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp
src/profiling/: Timer.h
src/rasterizer/: Framebuffer.cpp  Framebuffer.h  RasterizerDemo.cpp  RasterizerDemo.h  Triangle.h
src/simulation/rope/: rope.cpp  rope.h
